fixed some css paddings settings button is now top aligned

--- a/public/global.css
+++ b/public/global.css
@@ -22,6 +22,10 @@ body {
 	justify-content: center;
 }
 
+h1 {
+	margin-top: 10px;
+}
+
 h3 {
 	border-bottom: 1px solid #ff6400;
 	box-sizing: border-box;
